<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="wifi_only_upload"
        android:summary="@string/pref_description_wifi_only_upload"
        android:title="@string/pref_title_wifi_only_upload" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="enable_notis_upload"
        android:summary="@string/pref_description_enable_notis_upload"
        android:title="@string/pref_title_enable_notis_upload" />

    <PreferenceCategory android:title="@string/category_ftp">
        <SwitchPreference
            android:defaultValue="false"
            android:key="upload_ftp"
            android:title="@string/pref_title_upload_ftp" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="delete_after_upload_ftp"
            android:dependency="upload_ftp"
            android:summary="@string/pref_description_borrar_despues_upload_ftp"
            android:title="@string/pref_title_borrar_despues_upload_ftp" />

        <!-- NOTE: EditTextPreference accepts EditText attributes. -->
        <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
        <EditTextPreference
            android:defaultValue="@string/pref_default_ftp_ip"
            android:inputType="text"
            android:dependency="upload_ftp"
            android:key="ftp_ip"
            android:maxLines="1"
            android:selectAllOnFocus="false"
            android:singleLine="true"
            android:title="@string/pref_title_ftp_ip" />

        <EditTextPreference
            android:defaultValue="@string/pref_default_ftp_port"
            android:inputType="number"
            android:dependency="upload_ftp"
            android:key="ftp_port"
            android:maxLines="1"
            android:selectAllOnFocus="false"
            android:singleLine="true"
            android:title="@string/pref_title_ftp_port" />

        <ListPreference
            android:key="ftpclient_type"
            android:title="@string/pref_title_ftpclient_type"
            android:dependency="upload_ftp"
            android:entries="@array/pref_list_ftpclient_type"
            android:entryValues="@array/pref_values_ftpclient_type"/>

        <EditTextPreference
            android:defaultValue="@string/pref_default_ftp_username"
            android:inputType="text"
            android:dependency="upload_ftp"
            android:key="ftp_username"
            android:maxLines="1"
            android:selectAllOnFocus="false"
            android:singleLine="true"
            android:title="@string/pref_title_ftp_username" />

        <EditTextPreference
            android:defaultValue="@string/pref_default_ftp_passwd"
            android:inputType="textPassword"
            android:dependency="upload_ftp"
            android:key="ftp_passwd"
            android:maxLines="1"
            android:selectAllOnFocus="false"
            android:singleLine="true"
            android:title="@string/pref_title_ftp_passwd" />

        <EditTextPreference
            android:defaultValue="@string/pref_default_ftp_defpath"
            android:inputType="text"
            android:dependency="upload_ftp"
            android:key="ftp_defpath"
            android:maxLines="1"
            android:selectAllOnFocus="false"
            android:singleLine="true"
            android:title="@string/pref_title_ftp_defpath" />
    </PreferenceCategory>
</PreferenceScreen>
