<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="app.savetalk.ui.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="app.savetalk.ui.SettingsActivity$AudioQualityPreferenceFragment"
        android:icon="@drawable/ic_audiotrack_black_24dp"
        android:title="@string/pref_header_audio_quality" />

    <header
        android:fragment="app.savetalk.ui.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_data_upload" />

</preference-headers>
